# MyCalculator

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: windows-build.yml
src/: CalculatorWindow.cpp  CalculatorWindow.h  main.cpp
